<resources>
    <string name="app_name">Firebase Login</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="button_register_hint">REGISTER</string>
    <string name="label_register_activity">Register</string>
    <string name="label_login_activity">Login</string>
    <string name="label_main_activity">Main Menu</string>
    <string name="button_login_hint">LOGIN</string>
    <string name="email_empty_message">Email must be filled in !</string>
    <string name="password_empty_message">Password must be filled in !</string>
    <string name="password_not_valid_message">Password must be more 6 characters !</string>
    <string name="signin_failed_message">Login failed !</string>
    <string name="signup_failed_message">Signup failed !</string>
    <string name="signin_success_message">Signin success !</string>
    <string name="signup_success_message">Signup success !</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="signin_here">Signin Here</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="exit_title_menu">Exit</string>
</resources>
